# destroyer_ws

./: README.md  custom_casa_1.pgm  custom_casa_1.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/custom_msgs/share/custom_msgs/: local_setup.sh  package.sh  package.xml
install/custom_msgs/share/custom_msgs/msg/: Belief.idl  (+3 more)
install/grid_fastslam/include/grid_fastslam/: grid_fastslam.hpp
install/grid_fastslam/share/grid_fastslam/: local_setup.dsv  local_setup.sh  package.sh  package.xml
install/mappeate_y_ubicate/lib/mappeate_y_ubicate/: delta_odom  fastslam
install/mappeate_y_ubicate/share/mappeate_y_ubicate/: package.sh  package.xml
install/mappeate_y_ubicate/share/mappeate_y_ubicate/launch/: launch_my_fastslam.launch.py
install/mappeate_y_ubicate/share/mappeate_y_ubicate/rviz/: slam.rviz
install/tools/lib/tools/: delta_odom  map_saver
install/tools/share/tools/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtlebot3_custom_simulation/lib/turtlebot3_custom_simulation/: turtlebot3_custom_simulation
log/: latest_build
src/grid_fastslam/src/: grid_fastslam.cpp
src/mappeate_y_ubicate/: setup.cfg  setup.py
src/mappeate_y_ubicate/launch/: launch_my_fastslam.launch.py
src/mappeate_y_ubicate/mappeate_y_ubicate/: fastslam.py  robot_functions.py
src/state_machine/maps/: my_map.yaml
src/state_machine/state_machine/: localization.py  navigator.py  robot_functions.py
src/tools/: package.xml  setup.py
src/tools/launch/: odom.launch.py
src/tools/tools/: delta_odom.py  map_saver.py
(+51 files in other folders)
