<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mappeate_y_ubicate</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jkaplan@udesa.edu.ar">juan</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>launch_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>rviz2</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>nav2_common</depend>
  <depend>gazebo_ros</depend>
  <depend>tf_transformations</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
